--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "sass": "^1.80.6",
+    "sass-loader": "^16.0.3",
     "vue": "^2.6.14"
   },
   "devDependencies": {
